--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,9 @@ cmake_minimum_required(VERSION 3.20)
 
 project(spigot-builder LANGUAGES CXX)
 
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
+
+add_subdirectory(app)
