--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 
 find_package(Qt6 REQUIRED COMPONENTS Widgets Network)
+find_package(LibArchive REQUIRED)
 
+include(FetchContent)
 add_subdirectory(app)
